--- a/defs.tex
+++ b/defs.tex
@@ -125,6 +125,8 @@
 \newcommand{\logit}{\operatorname{logit}} % logit
 \newcommand{\posi}{\operatorname{posi}} % positive cone
 \newcommand{\lik}{\operatorname{lik}} % likelihood function
+\newcommand{\tr}{\operatorname{tr}} % trace of a matrix
+
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
