--- a/intro.tex
+++ b/intro.tex
@@ -82,6 +82,11 @@ Scalars are denoted by italic letters ($x$, $\theta$),
 whereas vectors are denoted by bold italic letters ($\vec{x}$, $\btheta$).
 Matrices are written in bold regular (i.e., non-italic) uppercase letters, like $\mbf{X}$, $\mbf{Z}$,
 and transposed matrices are marked by a raised uppercase sans serif T ($\mbf{X}^\tra$).
+The trace of a matrix is denoted by $\tr(\mbf{X})$;
+unit or identity matrices are denoted by $\mbf{I}$,
+sometimes with an added subscript indicating their size
+(in the case that the size may be not obvious or in order to emphasise it),
+such that $\mbf{I}_p$ denotes a unit matrix of size $p \times p$.
 
 For statistical models, samples, i.e.\ realisations of random variables,
 are denoted by lowercase letters ($x$, $\x$),
