--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1191,7 +1191,7 @@ $\nz$ in the IBBM to take on negative values, opening up a rich
 field for research and discussions.
 
 
-\subsection*{Acknowledgements}%\vspace*{-1.0ex}%
+\subsubsection*{Acknowledgements}%\vspace*{-1.0ex}%
 
 The authors thank the referees for very helpful comments.
 
