--- a/jstp.tex
+++ b/jstp.tex
@@ -1182,7 +1182,7 @@ true for robustified or generalised Bayesian methods, although these
 may hide this shortcoming better. One could argue, therefore, that
 they cannot be used to represent learning.''
 
-\subsection*{Acknowledgements}
+\subsubsection*{Acknowledgements}
 The authors would like to thank two anonymous referees for their very stimulating comments.
 
 
