diss: isipta07 move?

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -1275,3 +1275,8 @@ Finally, $n\uz$ has to be varied along the lines of Walter \& Augustin (2009, Se
 The authors are very grateful to Erik Quaeghebeur and Frank Coolen for intensive discussions on foundations of generalised Bayesian
 inference, and to Thomas Kneib for help at several stages of writing this paper.
 
+
+\section{Linear Regression Analysis under Sets of Conjugate Priors***}
+
+***short summary of ISIPTA'07 paper??***
+
