--- a/jstp.tex
+++ b/jstp.tex
@@ -1195,10 +1195,8 @@ The authors would like to thank two anonymous referees for their very stimulatin
 seperate section, take short description from abstract for ISIPTA'09 poster?
 
 
-\section{***Isipta'07 paper?***}
+%\section{***Isipta'07 paper?***}
 
-%seperate section, or integrate into jstp?
-
-***I would prefer not to include this, or just give a short summary of the contents.***
+%***I would prefer not to include this, or just give a short summary of the contents.***
 
 
